<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:background="@color/background_color"
>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"

        android:layout_height="99dp"
        android:layout_marginBottom="5dp"


        app:cardBackgroundColor="@color/c1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/expenses"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/income_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintHorizontal_bias="0.465"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/total_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.207" />

            <TextView
                android:id="@+id/incomevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_value"
                android:textColor="@color/income_color"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/expensevalue"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/expensevalue"
                app:layout_constraintVertical_bias="0.272" />

            <TextView
                android:id="@+id/expensevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/expense_value"
                android:textColor="@color/red"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/totalvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_value"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/expensevalue"
                app:layout_constraintEnd_toEndOf="@+id/textView17"
                app:layout_constraintHorizontal_bias="0.574"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="@+id/expensevalue"
                app:layout_constraintVertical_bias="0.272" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="201dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_baseline_add_24" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:background="@color/c1"
            app:menu="@menu/menu_navigtion" />

    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cardview1"
        android:layout_below="@+id/materialCardView"
       >

        <TextView
            android:id="@+id/textviewnotrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"

            android:layout_centerInParent="true"
            android:text="@string/no_transaction_found"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <!--        <ListView-->
        <!--            android:id="@+id/listviewtrans"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            tools:listitem="@layout/single_item">-->

        <!--        </ListView>-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            tools:listitem="@layout/single_item">

        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

</RelativeLayout>